<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/home_item"
    android:layout_margin="10dp"
    android:background="?attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/category_item_image"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/category_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/category_item_image"
            android:layout_toRightOf="@+id/category_item_image"
            android:text="@string/menu_title"
            android:textColor="@color/cardview_dark_background"
            android:textSize="35sp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_item_details"
            android:text="@string/menu_details"
            android:textColor="@color/cardview_dark_background"
            android:layout_toEndOf="@id/category_item_image"
            android:layout_toRightOf="@+id/category_item_image"
            android:layout_below="@id/category_item_title"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/category_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_item_details"
            android:layout_toEndOf="@id/category_item_image"
            android:layout_toRightOf="@+id/category_item_image"
            android:text="@string/id"
            android:textColor="@color/color_bg"
            android:textSize="20sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>