<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/home_item"
    android:layout_margin="10dp"
    android:background="?attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/item_image"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_title"
            android:text="@string/menu_title"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="bold"
            android:layout_toEndOf="@id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:layout_alignParentTop="true"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_title"
            android:layout_toEndOf="@id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:text="@string/menu_price"
            android:textColor="@color/cardview_dark_background"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:layout_toEndOf="@id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:text="@string/menu_details"
            android:textColor="@color/cardview_dark_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/rating_product"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_details"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:layout_toEndOf="@+id/item_image"
            android:layout_toRightOf="@+id/item_image"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="@color/color_bg"
            android:scaleX="1.8"
            android:scaleY="1.8"
            android:secondaryProgressTint="@color/bt_color_1"
            android:stepSize="0.1" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>